# yoptachat

./: .gitignore  README.md  meson.build  run.sh
libs/: meson.build
libs/hack/concepts/: concepts.hpp
libs/hack/exception/: exception.hpp
libs/hack/iterators/: associative_ostream_iterator.hpp  sequence_ostream_iterator.hpp
libs/hack/logger/: logger.hpp
libs/hack/security/: uuid.hpp
libs/hack/string/: string_concat_helper.hpp
libs/hack/transaction/: transaction.hpp
libs/hack/utils/: json_converter.hpp  using.hpp
libs/https/: https.hpp
libs/https/helpers/: function_manager.hpp  verification.hpp
src/: meson.build
src/api/executor/: executor.hpp
src/api/executor/funcs/: htc.hpp
src/api/inspector/funcs/: htc.hpp
src/libs/hack/utils/: color.hpp  json_compare.hpp
src/libs/https/helpers/: execute.hpp  inspector.hpp
subprojects/: httplib.wrap  jwt-cpp.wrap
